--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,33 +5,36 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/turquoise_ombre"
     tools:context=".Register">
 
     <TextView
         android:id="@+id/txtMain"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:fontFamily="cursive"
         android:text="Register"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19" />
+        app:layout_constraintVertical_bias="0.397" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onSignUpClick"
+
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword"
-        app:layout_constraintVertical_bias="0.26" />
+        app:layout_constraintVertical_bias="0.137" />
 
     <TextView
         android:id="@+id/credentialsValidator"
@@ -57,7 +60,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.664" />
 
     <EditText
         android:id="@+id/editTextUserEmailAddress"
@@ -91,12 +95,42 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:onClick="onAlreadyRegistered"
         android:text="click here if you already have an account"
+        android:textColor="#040101"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/credentialsValidator" />
+        app:layout_constraintTop_toBottomOf="@+id/credentialsValidator"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:layout_width="265dp"
+        android:layout_height="243dp"
+        android:rotation="-56"
+        android:rotationX="0"
+        android:src="@drawable/ot2"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-122dp"
+        tools:layout_editor_absoluteY="97dp" />
+
+    <ImageView
+        android:layout_width="265dp"
+        android:layout_height="243dp"
+        android:src="@drawable/ot2"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="223dp"
+        tools:layout_editor_absoluteY="446dp" />
+    <ImageView
+        android:layout_width="265dp"
+        android:layout_height="243dp"
+        android:src="@drawable/icon"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="74dp"
+        tools:layout_editor_absoluteY="21dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
