Appointment requests working

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,34 @@
     android:background="@drawable/turquoise_ombre"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="274dp"
+        android:layout_height="296dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="148dp"
+        android:rotation="-73"
+        android:src="@drawable/ot2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="233dp"
+        android:layout_height="281dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginBottom="380dp"
+        android:src="@drawable/ot2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="233dp"
+        android:layout_height="281dp"
+        android:layout_marginEnd="192dp"
+        android:layout_marginBottom="508dp"
+        android:src="@drawable/ot2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/txtMain"
         android:layout_width="wrap_content"
@@ -17,18 +45,19 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.415" />
+        app:layout_constraintVertical_bias="0.422" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_background"
+        android:onClick="onContinueClick"
+        android:text="Continue"
         android:textColor="#bb4500"
-        android:onClick="onLogOutClick"
-        android:text="Log Out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -36,11 +65,28 @@
         app:layout_constraintTop_toBottomOf="@+id/txtMain"
         app:layout_constraintVertical_bias="0.379" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_background"
+        android:onClick="onLogOutClick"
+        android:text="Log Out"
+        android:textColor="#bb4500"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtMain"
+        app:layout_constraintVertical_bias="0.608" />
+
     <TextView
         android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="171dp"
+        android:layout_height="55dp"
         android:text="Username: "
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/profile_pic"
         app:layout_constraintHorizontal_bias="0.44"
