--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,9 @@
-<!-- button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#FFFF" /> <!-- Dark Orange -->
+    <solid android:color="#FFFFFF" />
+    <gradient
+        android:startColor="#FFFFFF"
+        android:endColor="#FFA756"
+        android:type="linear"
+        android:angle="45"/>
 </shape>
-
