--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,22 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword"
         app:layout_constraintVertical_bias="0.26999998" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:onClick="onHaveNotRegistered"
+        android:text="click here if you dont have an account"
+        android:textColor="#040101"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintVertical_bias="0.0" />
+
+
     <TextView
         android:id="@+id/credentialsValidator"
         android:layout_width="wrap_content"
