--- a/app/src/main/res/layout/activity_tablayout.xml
+++ b/app/src/main/res/layout/activity_tablayout.xml
@@ -8,14 +8,19 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/design_default_color_primary_dark"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        android:background="@drawable/turquoise2"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        android:padding="20dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginTop="38dp"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
@@ -24,9 +29,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="46dp"
+            android:textStyle="bold"
             android:text="Username"
             android:textColor="#fff"
             android:textSize="18sp" />
+
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -34,10 +42,16 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/design_default_color_primary_dark"
+        android:background="@drawable/turquoise2"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textStyle = "bold"
         app:tabIndicatorColor="#fff"
         app:tabSelectedTextColor="#fff"
         app:tabTextColor="#fff" />
+
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
@@ -45,5 +59,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+
 
 </LinearLayout>
